		- MDS dialog: toggling export to trajectory file was broken
		- now show the correct number of bonds added when building bonds for a structure
		- ResidueIndexColorProcessor now no longer considers water residues 
		- visualization of contour surfaces had sometimes incorrect normals
		- several core dumps related to missing mutex locks
		- seg fault in RingPerceptionProcessesor

Changed:
  - BALLView
		- improved focus camera on molecular structures
	  - general improvements in the user interface
		- inside of surfaces is now correctly drawn
		- improved the code for the BALLView termination process
		- removed the old Move-Dialog
		- .BALLView config files are now always stored in the users homedir
		- changed Coloring or Model settings are now visible after pressing apply
		- disabled Server in BALLView by default
		- cleanup for storing of settings from dialogs
	- ~ModularWidget now calls MainControl::removeModularWidget, so
		from ModularWidget derived classes no longer have to deregister themselves


1.0: 24.05.2004

Changed:
  - molview has been renamed to BALLView in order to avoid
    confusion (there are other applications out there with the name molview)
  - default constructor of FragmentDB does no longer open the default
    fragment database. If you want the same behavior as before, simply
    call FragmentDB::init() or use the other constructor with an empty
    string as an argument (e.g. 'FragmentDB db("");').

Added + improved:
  - MOLFile and SDFile are now more robust with respect to slight errors in the
    files
  - Documentation has been added and improved in numerous places
  - Dialog to download and open PDB files directly from www.PDB.org
	- Mouse button emulation in Scene for mice with less than three buttons (e.g. Mac):
    use SHIFT, ALT, CTRL together with the mouse button
	- Mousewheel sensitivity can be adjusted
	- Now using Windows native dialogs on Windows platforms
	- Added capablity to BALLView to log to file

Installation: