@@ -56,6 +56,7 @@ Fixed:
 		- visualization of contour surfaces had sometimes incorrect normals
 		- several core dumps related to missing mutex locks
 		- seg fault in RingPerceptionProcessesor
+		- core dump in calculation of contour surfaces
 
 Changed:
   - BALLView
